# RustGPT-Chinese

./: .gitignore  CHANGELOG.md  CHANGELOG_OPTIMIZATION.md  CLAUDE.md  Cargo.toml  DEPENDENCY_CHANGES.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_v0.4.0.md  OPTIMIZATION_MEMORY.md  OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  README_zh.md  RELEASE_v0.3.1.md  TEST_RESULTS.md  rustfmt.toml
.claude/output-styles/: chinese-expert-enhanced.md
benches/: memory_optimization_bench.rs  performance_benchmark.rs
data/: chat_training_data.json  chat_training_data_test.csv  chinese_idioms.json  pretraining_data.json  pretraining_data_test.csv
docs/: HOW_TO_SAVE_LOAD.md  model_persistence_guide_zh.md  self_attention_optimization_summary.md  self_attention_optimizations.md  训练性能优化指南.md  训练稳定化与后续改进路线.md
examples/: model_persistence.rs
src/: adam.rs  checkpoint_manager.rs  dataset_loader.rs  dropout.rs  embeddings.rs  feed_forward.rs  fused_ops.rs  layer_norm.rs  lib.rs  llm.rs  main.rs  model_serialization.rs  output_projection.rs  performance_monitor.rs  position_encoding.rs  self_attention.rs  semantic_enhancer.rs  training_optimizations.rs  transformer.rs  utils.rs  vocab.rs
tests/: checkpoint_test.rs  chinese_tests.rs  dataset_loader_test.rs  embeddings_test.rs  llm_test.rs  model_serialization_test.rs  position_encoding_test.rs  self_attention_benchmark.rs  self_attention_grad_test.rs  self_attention_optimization_test.rs  vocab_test.rs
