[package]
name = "llm"
version = "0.1.0"
# 2024 = latest edition
edition = "2024"

[dependencies]
bincode = "2.0.1"
csv = "1.3"
jieba-rs = "0.7"
# 启用 ndarray 的 BLAS 后端以加速矩阵运算
ndarray = { version = "0.16.1", features = ["rayon"] }
# OpenBLAS 后端（可选，如果系统支持）
# blas-src = { version = "0.10", features = ["openblas"], optional = true }
rand = "0.9.2"
rand_distr = "0.5.0"
regex = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Add any test-specific dependencies here if needed

# 优化编译配置
[profile.release]
opt-level = 3           # 最高优化级别
lto = true              # 链接时优化
codegen-units = 1       # 单一代码生成单元以获得更好的优化
strip = true            # 移除调试符号减小二进制大小

[lib]
name = "llm"
path = "src/lib.rs"

[[bin]]
name = "llm"
path = "src/main.rs"
