[package]
name = "llm"
version = "0.4.0"
# 2024 = latest edition
edition = "2024"

[dependencies]
bincode = "2.0.1"
chrono = "0.4"
jieba-rs = "0.7"
# 移除 rayon feature 以减少编译时间和二进制大小（小模型不需要并行计算）
ndarray = "0.16.1"
rand = "0.9.2"
regex = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "4.3"


[dev-dependencies]
# Add any test-specific dependencies here if needed

# 优化编译配置
[profile.release]
opt-level = 3           # 最高优化级别
lto = true              # 链接时优化
codegen-units = 1       # 单一代码生成单元以获得更好的优化
strip = true            # 移除调试符号减小二进制大小

[lib]
name = "llm"
path = "src/lib.rs"

[[bin]]
name = "llm"
path = "src/main.rs"

[[bench]]
name = "memory_optimization_bench"
path = "benches/memory_optimization_bench.rs"
harness = false
