[package]
name = "llm"
version = "0.4.0"
# 2024 = latest edition
edition = "2024"

[dependencies]
bincode = "2.0.1"
chrono = "0.4"
jieba-rs = "0.7"
# ndarray with optional BLAS support for tensor acceleration
# Use "cargo build --features blas" to enable BLAS acceleration
ndarray = "0.16.1"
# OpenBLAS backend (optional, requires system OpenBLAS installation)
blas-src = { version = "0.10", features = ["openblas"], optional = true }
openblas-src = { version = "0.10", features = ["cblas", "system"], optional = true }
# LRU cache for tokenizer optimization
lru = "0.12"
rand = "0.9.2"
regex = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "4.3"

[features]
default = []
blas = ["dep:blas-src", "dep:openblas-src", "ndarray/blas"]


[dev-dependencies]
# Add any test-specific dependencies here if needed

# 优化编译配置
[profile.release]
opt-level = 3           # 最高优化级别
lto = true              # 链接时优化
codegen-units = 1       # 单一代码生成单元以获得更好的优化
strip = true            # 移除调试符号减小二进制大小

[lib]
name = "llm"
path = "src/lib.rs"

[[bin]]
name = "llm"
path = "src/main.rs"

[[bench]]
name = "memory_optimization_bench"
path = "benches/memory_optimization_bench.rs"
harness = false

[[bench]]
name = "performance_benchmark"
path = "benches/performance_benchmark.rs"
harness = false
